Issue #17137: When an Unicode string is resized, the internal wide character string (wstr) format is now cleared.